[package]
name = "hiho"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = "3.3"
aes = "0.8.4"
cipher = "0.4" 
typenum = "1.17"
block-padding = "0.3"
rand = "0.9.1"
hex = "0.4"
sha2 = "0.10"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
generic-array = "0.14"
hmac = { version = "0.13.0-pre.5" }

[dev-dependencies]
tempfile = "3.3"